--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
     "redis": "^5.10.0",
+    "stripe": "^20.1.1",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0"
   }
