--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "autoprefixer": "^10.4.23",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.9.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
     "redis": "^5.10.0",
