--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
